--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -13,19 +13,24 @@
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
     "boardgame.io": "^0.43.2",
+    "bootstrap": "^4.6.0",
     "express": "~4.17.1",
+    "jquery": "^3.5.1",
     "jsx-loader": "^0.13.2",
+    "koa-static": "^5.0.0",
     "path": "~0.12.7",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "reactstrap": "^8.9.0",
     "webpack": "~4.42.1",
     "webpack-cli": "~3.3.11"
   },
   "devDependencies": {
     "ts-loader": "^7.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "scripts": {
-    "build": "webpack-cli app.tsx --config webpack-config.js"
+    "build": "webpack-cli app.tsx --config webpack-config.js",
+    "serve": "node -r esm src/server.js"
   }
 }
