--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.7.0",
     "boardgame.io": "^0.43.2",
     "bootstrap": "^4.6.0",
+    "esm": "^3.2.25",
     "express": "~4.17.1",
     "jquery": "^3.5.1",
     "jsx-loader": "^0.13.2",
