--- a/.github/workflows/master_tichu.yml
+++ b/.github/workflows/master_tichu.yml
@@ -26,6 +26,7 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+      working-directory: tichu
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
