--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -28,6 +28,8 @@
     "path": "~0.12.7",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
     "webpack": "~4.42.1",
     "webpack-cli": "~3.3.11"
