--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -18,8 +18,10 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "bgio-azure-storage": "^0.2.0",
     "boardgame.io": "^0.43.2",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "~4.17.1",
     "jquery": "^3.5.1",
