--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -25,6 +25,7 @@
     "esm": "^3.2.25",
     "express": "~4.17.1",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "jsx-loader": "^0.13.2",
     "koa-static": "^5.0.0",
     "path": "~0.12.7",
@@ -32,6 +33,7 @@
     "react-dom": "~16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-social-login": "^3.4.10",
     "reactstrap": "^8.9.0",
     "webpack": "~4.42.1",
     "webpack-cli": "~3.3.11"
