--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -24,9 +24,11 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "~4.17.1",
+    "google-auth-library": "^7.0.2",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "jsx-loader": "^0.13.2",
+    "jwks-rsa": "^1.12.2",
     "koa-static": "^5.0.0",
     "path": "~0.12.7",
     "react": "~16.13.1",
