--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -30,12 +30,14 @@
     "jsx-loader": "^0.13.2",
     "jwks-rsa": "^1.12.2",
     "koa-static": "^5.0.0",
+    "oidc-client": "^1.11.5",
     "path": "~0.12.7",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-social-login": "^3.4.10",
+    "react-social-login-buttons": "^3.1.2",
     "reactstrap": "^8.9.0",
     "webpack": "~4.42.1",
     "webpack-cli": "~3.3.11"
