--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -30,6 +30,7 @@
     "path": "~0.12.7",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
