--- a/Tichu/package.json
+++ b/Tichu/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "jsx-loader": "^0.13.2",
     "jwks-rsa": "^1.12.2",
+    "koa-body": "^4.2.0",
     "koa-static": "^5.0.0",
     "oidc-client": "^1.11.5",
     "path": "~0.12.7",
